OldArchive/c57d26dfedb309dba9333ebd3df93c2c-d7c7258d4f54079e0f41bc7c3d0e802c/output
main.cpp:5:21: error: 'T' was not declared in this scope
 typedef std::vector<T> Heap;
                     ^
main.cpp:5:22: error: template argument 1 is invalid
 typedef std::vector<T> Heap;
                      ^
main.cpp:5:22: error: template argument 2 is invalid
main.cpp:5:28: error: invalid type in declaration before ';' token
 typedef std::vector<T> Heap;
                            ^
main.cpp:7:1: error: 'T' does not name a type
 T& get_parent(const Heap<T> & heap, const T & node)
 ^
